--- a/level 10/home/georgia.html
+++ b/level 10/home/georgia.html
@@ -34,7 +34,7 @@
         1327 წელს ჩობან ნოინის მოკვლით ჰულაგუიანთა სახელმწიფოში დაიწყო შინააშლილობა. ამით ისარგებლა გიორგიმ და საქართველოდან მონღოლები განდევნა. ამით დასრულდა მონღოლთა ასწლიანი ბატონობა საქართველოში. ამავე წელს მან დაიბრუნა სამცხე-საათაბაგო. სამცხის მმართველს, სარგის II-ს, რომელიც მისი ბიძა იყო, გიორგიმ ათაბაგობა და ამირსპასალარობა დაუმტკიცა. 1329 წელს გარდაიცვალა იმერეთის მეფე მიქელი. გიორგი გადავიდა დასავლეთში და ქუთაისი დაიკავა. დასავლეთ საქართველოს ერისთავებმა ერთგულება გიორგის გამოუცხადეს.
     </p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Mid-14th_c._Georgia_map.svg/440px-Mid-14th_c._Georgia_map.svg.png" alt="Error">
-    <a href="georgia1.html">
+    <a href="georgia1(list).html">
         <button>მეორე გვერდი</button>
     </a>
 
