--- a/level 40/home/results-summary-component-main/results-summary-component-main/index.html
+++ b/level 40/home/results-summary-component-main/results-summary-component-main/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Results summary component</title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -18,43 +19,66 @@
 
   <div class="container">
     <div class="left">
-      <h5>Your Result</h5>
+      <h3 class="header">Your Result</h3>
       <div class="circle">
         <h2>76</h2>
         <p>of 100</p>
       </div>
-      <h4>Great</h4>
-      <p>You scored higher than 65% of the people who have taken these tests.</p>
+      <h2 class="finalWord">Great</h2>
+      <p class="i">You scored higher than 65% of the people who have taken these tests </p>
     </div>
-
     <div class="right">
-      <h5>Summary</h5>
+      <h3>Summary</h3>
 
+      <div class="reaction">
+        <div class="icon1">
+          <img src="assets/images/icon-reaction.svg" alt="">
+          <p>Reaction</p>
+        </div>
+        <div class="score1">
+          80 / 100
+        </div>
+      </div>
+        
+      <div class="memory">
+        <div class="icon2">
+          <img src="assets/images/icon-memory.svg" alt="">
+          <p>Memory</p>
+        </div>
+        <div class="score2">
+          92 / 100
+        </div>
+      </div>
+
+      <div class="verbal">
+        <div class="icon3">
+          <img src="assets/images/icon-verbal.svg" alt="">
+          <p>Verbal</p>
+        </div>
+        <div class="score3">
+          61 / 100
+        </div>
+      </div>
+
+      <div class="visual">
+        <div class="icon4">
+          <img src="assets/images/icon-visual.svg" alt="">
+          <p>Visual</p>
+        </div>
+        <div class="score4">
+          72 / 100
+        </div>
+      </div>
+      <button>
+        Continue
+      </button>
     </div>
   </div>
 
+
   
   
   
-  
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+ 
 </body>
 </html>
