twenty third commit

--- a/level 37/class/positions.html
+++ b/level 37/class/positions.html
@@ -59,7 +59,7 @@
         
        
     </main>
-    <footer class="fixed_footer">
+    <footer class="fixedFooter">
         <p>Author: x</p>
         <p>About us: x</p>
         <p>Contacts: (link 1), (link 2), (link 3)</p>
