--- a/level 38/class/index1.html
+++ b/level 38/class/index1.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia nobis ad ab sint minus, placeat voluptatibus numquam, natus ipsam illo sit odit dignissimos deleniti magni corrupti ut tempora eaque voluptatum.</p>
+    <p>Lorem ispsum dolor sit amet consectetur, adipisicing elit. Quia nobis ad ab sint minus, placeat voluptatibus numquam, natus ipsam illo sit odit dignissimos deleniti magni corrupti ut tempora eaque voluptatum.</p>
 </body>
 </html>
