twenty fourth commit

--- a/level 40/class/index.html
+++ b/level 40/class/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="first">Content</div>
-    <div class="second">Content</div>
+    <div class="first">Content1</div>
+    <div class="second">Content2</div>
 </body>
 </html>
