--- a/level 43/class/root.html
+++ b/level 43/class/root.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="root.css">
 </head>
 <body>
-    <div class="d1">div1</div>
-    <div class="d2">div2</div>
-    <div class="d3">div3</div>
+    <div class="div1">div1</div>
+    <div class="div2">div2</div>
+    <div class="div3">div3</div>
 </body>
 </html>
