twenty eighth commit

--- a/level 38/home/chat-app-css-illustration-master/chat-app-css-illustration-master/index.html
+++ b/level 38/home/chat-app-css-illustration-master/chat-app-css-illustration-master/index.html
@@ -8,48 +8,105 @@
   <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
+  <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
   
+<div class="shape"></div>
+<div class="shape2"></div>
 
+<div class="wrapper">
+  <div class="phone">
+    <div class="ghost">
 
-  Samuel Green
-  Available to Walk
+    </div>
+    <div class="upper">
+      <img class="pfp" src="images/avatar.jpg" alt="profile picture">
+      <div class="profile">
+        <p>Samuel Green</p>
+        <p class="subheading">Available to walk</p>
+      </div>
+    </div>
+    <div class="phoneContent">
+      <div class="upperLeftMsg">
+        <div>
+          <p>That sounds great. I'd be <br> happy with that.</p>
+        </div>
+        <div>
+          <p>Could you send over some <br> pictures of your dog, please?</p>
+        </div>
+      </div>
+      <div class="rightMsg">
+        <div class="dogImages">
+          <img src="images/dog-image-1.jpg" alt="image">
+          <img src="images/dog-image-2.jpg" alt="image">
+          <img src="images/dog-image-3.jpg" alt="image">
+        </div>
+        <div class="rightText">
+          <p>
+            Here are a few pictures. She's <br> a happy girl!
+          </p>
+        </div>
+        <div class="rightText">
+          <p>
+            Can you make it?
+          </p>
+        </div>
+      </div>
+      <div class="bottomLeftMsg">
+        <div class="leftText">
+          <p>
+            She looks so happy! The time <br> we discussed works. How <br> long shall I take her out for?
+          </p>
+        </div>
+        <div class="payment">
+          <div class="circle"></div>
+          <div class="paymentText">
+            <p>30 minute walk</p>
+            <p class="price">$29</p>
+          </div>
+        </div>
+        <div class="payment">
+          <div class="circle"></div>
+          <div class="paymentText">
+            <p>1 hour walk</p>
+            <p class="price">$49</p>
+          </div>
 
-  That sounds great. I’d be happy with that.
-
-  Could you send over some pictures of your dog, please?
-
-  Here are a few pictures. She’s a happy girl!
-
-  Can you make it?
-
-  She looks so happy! The time we discussed works. How long shall I take her out for?
-
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
-
-  Simple booking
-
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to 
-  discuss arrangements and make bookings. Once the walk has been completed you can rate 
-  your walker and book again all through the chat.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+        </div>
+        
+      </div>
+      <div class="messageInput">
+          <p>Type a message…</p>
+          <div class="msgSender">
+            <img src="images/next.png" alt="">
+          </div>
+      </div>
+    </div>
   </div>
+
+  <div class="paragraph">
+    <p class="header">
+      Simple booking
+    </p>
+    <p class="pText">
+      Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+    discuss arrangements and make bookings. Once the walk has been completed you can rate 
+    your walker and book again all through the chat.
+    </p>
+  </div>
+</div>
+  
+
+  
+ 
+
+
+
+  
+
+
 </body>
 </html>
