--- a/level 47/home/bento-grid-main/bento-grid-main/index.html
+++ b/level 47/home/bento-grid-main/bento-grid-main/index.html
@@ -7,36 +7,52 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Bento grid</title>
+  <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <container class="container">
+    <div class="gridLeft">
+      <div class="leftDiv1">
+        <p>Create and <br> schedule <br> content <br> quicker.</p>
+        <img src="assets/images/illustration-create-post.webp" alt="">
+      </div>
+      <div class="leftDiv2">
+        <p>Write your <br> content <br> using AI.</p>
+        <img src="assets/images/illustration-ai-content.webp" alt="">
+      </div>
+    </div>
+    <div class="gridRight">
+      <div class="div1">
+        <p class="header">Social Media <span>10x</span> <br> Faster with AI</p>
+        <img src="assets/images/illustration-five-stars.webp" alt="">
+        <p class="p">Over 4,000 5-star reviews</p>
+      </div>
+      <div class="div2">
+        <img src="assets/images/illustration-multiple-platforms.webp" alt="">
+        <p>Manage multiple accounts and platforms.</p>
+      </div>
+      <div class="div3">
+        <p>Maintain a consistent posting schedule</p>
+        <img src="assets/images/illustration-consistent-schedule.webp" alt="">
+      </div>
+      <div class="div4">
+        <p>Schedule to social media.</p>
+        <img src="assets/images/illustration-schedule-posts.webp" alt="">
+        <p> Optimize post timings to publish content at the perfect time for your audience.</p>
+      </div>
+      <div class="div5">
+        <p>>56%</p>
+        <p>faster audience growth</p>
+        <img src="assets/images/illustration-audience-growth.webp" alt="">
+      </div>
+      <div class="div6">
+        <img src="assets/images/illustration-grow-followers.webp" alt="">
+        <p>Grow followers with non-stop content.</p>
+      </div>
+    </div>
+  </container>
 
-  Social Media 10x Faster with AI
-  Over 4,000 5-star reviews
-
-  Manage multiple accounts and platforms.
-
-  Maintain a consistent posting schedule.
-
-  Schedule to social media.
-  Optimize post timings to publish content at the perfect time for your audience.
   
-  Grow followers with non-stop content.
-
-  >56% faster audience growth
-  
-  Create and schedule content quicker.
-
-  Write your content using AI.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
