--- a/level 52/home/ecommerce-product-page-main/ecommerce-product-page-main/index.html
+++ b/level 52/home/ecommerce-product-page-main/ecommerce-product-page-main/index.html
@@ -5,40 +5,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | E-commerce product page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
-
-  Collections
-  Men
-  Women
-  About
-  Contact
-
-  Sneaker Company
-
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <header>
+    <div class="leftHeader">
+      <div class="logo">
+        <img class="menu" src="images/icon-menu.svg" alt="menu">
+        <img class="logo" src="images/logo.svg" alt="logo">
+      </div>
+      <div class="categories">
+        <p>Collections</p>
+        <p>Men</p>
+        <p>Women</p>
+        <p>About</p>
+        <p>Contact</p>
+      </div>
+    </div>
+    <div class="rightHeader">
+        <img src="images/icon-cart.svg" alt="">
+        <img src="images/image-avatar.png" alt="">
+    </div>
+  </header>
+  <div class="wrapper">
+    <div class="container">
+      <div class="leftContainer">
+        <img class="bigImage" src="images/image-product-1.jpg" alt="">
+        <div class="imageThumbnails">
+          <div><img class="thumbnail" src="images/image-product-1-thumbnail.jpg" alt=""></div>
+          <div><img class="thumbnail" src="images/image-product-2-thumbnail.jpg" alt=""></div>
+          <div><img class="thumbnail" src="images/image-product-3-thumbnail.jpg" alt=""></div>
+          <div><img class="thumbnail" src="images/image-product-4-thumbnail.jpg" alt=""></div>
+        </div>
+      </div>
+      <div class="rightContainer">
+        <div class="heading">
+          <p class="smallHeading">Sneaker Company</p>
+          <p class="largeHeading">Fall Limited Edition Sneakers</p>
+        </div>
+        <div class="info">
+          <p class="text">
+            These low-profile sneakers are your perfect casual wear companion. Featuring a 
+            durable rubber outer sole, they'll withstand everything the weather can offer.
+          </p>
+          <div class="price">
+            <div class="currentPrice">
+              <p class="value">$125.00</p>
+              <div class="percentage">
+                <p>50%</p>
+              </div>
+            </div>
+            <div class="previousPrice">
+              <p>$250.00</p>
+            </div>
+          </div>
+          <div class="buttons">
+            <div class="flexButton">
+              <img src="images/icon-minus.svg" alt="">
+              <p>0</p>
+              <img src="images/icon-plus.svg" alt="">
+            </div>
+            <button class="cartButton">
+              <img class="cart" src="images/icon-cart.svg" alt="">
+              <p>Add to cart</p>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
 </body>
 </html>
