--- a/pKristinaGw/program.html
+++ b/pKristinaGw/program.html
@@ -511,7 +511,7 @@ nav a {
             <img class=nav2 src="images/hamburger.png" alt="">
 
         <nav>
-            <a href="main.html">START HERE</a>
+            <a href="index.html">START HERE</a>
             <a href="about.html">ABOUT KRISTINA</a>
             <a href="#">PROGRAMS</a>
             <a href="https://www.youtube.com/user/FullyRawKristina">YOUTUBE</a>
