--- a/pKristinaGw/about.html
+++ b/pKristinaGw/about.html
@@ -14,7 +14,7 @@
             <img class=nav2 src="images/hamburger.png" alt="">
         
         <nav>
-            <a href="main.html">START HERE</a>
+            <a href="index.html">START HERE</a>
             <a href="#">ABOUT KRISTINA</a>
             <a href="program.html">PROGRAMS</a>
             <a href="https://www.youtube.com/user/FullyRawKristina">YOUTUBE</a>
