--- a/pKristinaGw/book.html
+++ b/pKristinaGw/book.html
@@ -13,7 +13,7 @@
             <img class=nav2 src="images/hamburger.png" alt="">
 
         <nav>
-            <a href="main.html">START HERE</a>
+            <a href="index.html">START HERE</a>
             <a href="about.html">ABOUT KRISTINA</a>
             <a href="program.html">PROGRAMS</a>
             <a href="https://www.youtube.com/user/FullyRawKristina">YOUTUBE</a>
